# nextgame

./: .gitignore  CMakeLists.txt  LICENSE  README  lsan.bash  lsan_test.bash
materials/: terrain.lua
org/: gui.org
scripts/: boot.lua  c_helpers.lua  gui.lua  init.lua  materials.lua  preproc.lua  preproc_test.lua  procimage.lua  utils.lua
scripts/gui/: abstract_widget.lua  button.lua  check_button.lua  combo_box.lua  consts.lua  dialogs.lua  edit_box.lua  expander.lua  filler.lua  frame.lua  grid.lua  image.lua  label.lua  list_box.lua  meta.lua  progress_bar.lua  radio_button.lua  scroll_box.lua  slider.lua  spin_box.lua  testing.lua  utils.lua
scripts/lib/: 30log.lua
scripts/ng/: binding.lua  cairo.lua  dir.lua  env.lua  event.lua  game.lua  keys.lua  math.lua  render.lua  struct.lua  utf8.lua  utf8_test.lua  wm.lua  wm_test.lua
shaders/: bloom.glsl  bloom_blur.glsl  bright_pass.glsl  col2d.glsl  color.glsl  color_alpha.glsl  debug.glsl  depth_only.glsl  depth_only_layered.glsl  ds_ambient.glsl  ds_pointlight.glsl  ds_postprocess.glsl  hdr.glsl  histogram.glsl  layer0.glsl  layer0_nogs.glsl  layer1.glsl  materials.glsl  normals.glsl  pointlight.glsl  rgb2hsv.glsl  rgb2yxy.glsl  sky.glsl  sky_hw.glsl  sky_rm.glsl  stencil.glsl  sun_shadow.glsl  termbox.glsl  terrain_cubes.glsl  terrain_debug.glsl  terrain_debug_wire.glsl  terrain_ds.glsl  terrain_wire.glsl  tex2d.glsl  ub_perframe.glsl  zoom_blur.glsl
source/: CMakeLists.txt  main.cpp  symbols.txt
source/Core/: BitArray.cpp  BitArray.h  ByteIO.cpp  ByteIO.h  Defer.h  Error.cpp  Error.h  Func.h  HashMap.h  Heap.h  Memory.cpp  Memory.h  Slice.cpp  Slice.h  StaticVector.h  String.cpp  String.h  StringFormat.cpp  UTF8.cpp  UTF8.h  UniquePtr.h  Utils.h  Vector.h
source/GUI/: Atlas.cpp  Atlas.h  Cursor.cpp  Cursor.h  Font.cpp  Font.h  RGB565.h  Termbox.cpp  Termbox.h  TermboxCell.h  TermboxWindow.cpp  TermboxWindow.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowManagerDriver.cpp  WindowManagerDriver.h
source/Game/: Camera.cpp  Camera.h
source/Geometry/: CubeData.cpp  CubeData.h  CubeField.cpp  CubeField.h  DebugDraw.cpp  DebugDraw.h  Global.h  HermiteData.h  HermiteField.cpp  HermiteField.h  HermiteFieldToMesh.cpp  Quads.cpp  Quads.h  RLE.h  VertexFormats.h  WorldOffset.cpp  WorldOffset.h
source/Map/: Chunk.cpp  Chunk.h  Config.h  Generator.cpp  Generator.h  Map.cpp  Map.h  Mutator.cpp  Mutator.h  Position.cpp  Position.h  Storage.cpp  Storage.h  StorageChunk.cpp  StorageChunk.h
source/Math/: Color.cpp  Color.h  Frustum.cpp  Frustum.h  Mat.cpp  Mat.h  Noise.cpp  Noise.h  Plane.cpp  Plane.h  Quat.cpp  Quat.h  Rect.h  Sphere.h  Transform.cpp  Transform.h  Vec.h
source/OOP/: EventManager.cpp  EventManager.h  RTTI.cpp  RTTI.h
source/OS/: AsyncQueue.h  IO.cpp  IO.h  ThreadLocal.h  Timer.cpp  Timer.h  WorkerPool.cpp  WorkerPool.h  WorkerTask.h
source/Physics/: Bullet.cpp  Bullet.h  Character.cpp  Character.h
source/Render/: ArHosekSkyModel.cpp  ArHosekSkyModel.h  DDS.cpp  DDS.h  DeferredShading.cpp  DeferredShading.h  LuaLoadShader.cpp  LuaLoadShader.h  Material.cpp  Material.h  Meshes.cpp  Meshes.h  OpenGL.cpp  OpenGL.h  PNG.cpp  PNG.h
source/Script/: Environment.cpp  Environment.h  EventDispatcher.cpp  EventDispatcher.h  Events.h  InterLua.cpp  InterLua.h  Lua.cpp  Lua.h
source/Serialize/: MsgPack.cpp  MsgPack.h  Serialize.h
source/Serialize/Cmp/: cmp.h
source/Serialize/MsgPack/: Vec.h
tests/: CMakeLists.txt  stf.h
tests/Core/: CMakeLists.txt  TestBitArray.cpp  TestDefer.cpp  TestError.cpp  TestHashMap.cpp  TestHeap.cpp  TestStaticVector.cpp  TestString.cpp  TestUTF8.cpp  TestVector.cpp
tests/GUI/: CMakeLists.txt  TestTermboxCell.cpp
tests/OS/: CMakeLists.txt  TestIO.cpp
tests/Serialize/: CMakeLists.txt  TestMsgPack.cpp
tools/: atlasgen.py  common.py  cur2cursor.py  en_ru.symbols.txt  fontgen.py  ifacegen.py
